--- a/src/main/resources/templates/thymeleaf/member/memberForm.html
+++ b/src/main/resources/templates/thymeleaf/member/memberForm.html
@@ -5,34 +5,49 @@
     <title>Title</title>
 </head>
 <body>
-<form action="memberRegist" method="post">
+<form action="memberRegist" method="post" th:object="${memberCommand}">
     <table border="1">
         <tr>
-            <td>회원번호 : <input type="text" name="memberNum" th:value="${autoNum}" readonly="readonly"/>자동부여</td>
+            <td>
+                회원번호 : <input type="text" name="memberNum" th:value="${memberCommand.memberNum}" readonly="readonly"/>자동부여
+            </td>
         </tr>
         <tr>
-            <td>회원이름 : <input type="text" name="memberName" /></td>
+            <td>
+                회원이름 : <input type="text" name="memberName" th:value="${memberCommand.memberName}" />
+                <span style="color: red" th:if="${#fields.hasErrors('memberName')}" th:errors="*{memberName}"></span>
+            </td>
         </tr>
         <tr>
-            <td>회원아이디 : <input type="text" name="memberId" id="userId"/></td>
+            <td>
+                회원아이디 : <input type="text" name="memberId" id="userId" th:value="${memberCommand.memberId}" />
+                <span style="color: red" th:if="${#fields.hasErrors('memberId')}" th:errors="*{memberId}"></span>
+            </td>
         </tr>
         <tr>
-            <td>회원비밀번호 : <input type="password" name="memberPw" /></td>
+            <td>
+                회원비밀번호 : <input type="password" name="memberPw" />
+                <span style="color: red" th:if="${#fields.hasErrors('memberPw')}" th:errors="*{memberPw}"></span>
+            </td>
         </tr>
         <tr>
             <td>
                 회원비밀번호 확인 : <input type="password" name="memberPwCon" />
-                <span>[[${errPw}]]</span>
+                <span style="color: red" th:if="${#fields.hasErrors('memberPwCon')}" th:errors="*{memberPwCon}"></span>
             </td>
         </tr>
         <tr>
-            <td>회원주소 : <input type="text" name="memberAddr" id="sample4_roadAddress" required="required" readonly="readonly"/> <button type="button" onclick="execDaumPostcode();">우편번호 검색</button></td>
+            <td>
+                회원주소 : <input type="text" name="memberAddr" id="sample4_roadAddress" required="required" readonly="readonly" th:value="${memberCommand.memberAddr}"/>
+                <button type="button" onclick="execDaumPostcode();">우편번호 검색</button>
+                <span style="color: red" th:if="${#fields.hasErrors('memberAddr')}" th:errors="*{memberAddr}"></span>
+            </td>
         </tr>
         <tr>
-            <td>상세주소 : <input type="text" name="memberAddrDetail" /></td>
+            <td>상세주소 : <input type="text" name="memberAddrDetail" th:value="${memberCommand.memberAddrDetail}" /></td>
         </tr>
         <tr>
-            <td>우편번호 : <input type="text" name="memberPost" /></td>
+            <td>우편번호 : <input type="text" name="memberPost" th:value="${memberCommand.memberPost}" /></td>
         </tr>
         <tr>
             <td>회원성별 :
@@ -41,16 +56,25 @@
             </td>
         </tr>
         <tr>
-            <td>회원연락처 1 : <input type="tel" name="memberPhone1" /></td>
+            <td>
+                회원연락처 1 : <input type="tel" name="memberPhone1" th:value="${memberCommand.memberPhone1}" />
+                <span style="color: red" th:if="${#fields.hasErrors('memberPhone1')}" th:errors="*{memberPhone1}"></span>
+            </td>
         </tr>
         <tr>
-            <td>회원연락처 2 : <input type="tel" name="memberPhone2" /></td>
+            <td>회원연락처 2 : <input type="tel" name="memberPhone2" th:value="${memberCommand.memberPhone2}" /></td>
         </tr>
         <tr>
-            <td>회원생년월일 : <input type="date" name="memberBirth" /></td>
+            <td>
+                회원생년월일 : <input type="date" name="memberBirth" th:value="${memberCommand.memberBirth}"  />
+                <span style="color: red" th:if="${#fields.hasErrors('memberBirth')}" th:errors="*{memberBirth}"></span>
+            </td>
         </tr>
         <tr>
-            <td>회원이메일 : <input type="email" name="memberEmail" /></td>
+            <td>
+                회원이메일 : <input type="email" name="memberEmail" th:value="${memberCommand.memberEmail}" />
+                <span style="color: red" th:if="${#fields.hasErrors('memberEmail')}" th:errors="*{memberEmail}"></span>
+            </td>
         </tr>
     </table>
     <input type="submit" value="회원등록" />
