--- a/src/main/resources/templates/thymeleaf/member/memberForm.html
+++ b/src/main/resources/templates/thymeleaf/member/memberForm.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script type="text/javascript" src="/static/js/daumAddressScript.js"></script>
+    <script type="text/javascript" src="/static/js/checkScript.js"></script>
 </head>
 <body>
 <form action="memberRegist" method="post" th:object="${memberCommand}">
@@ -38,7 +42,7 @@
         </tr>
         <tr>
             <td>
-                회원주소 : <input type="text" name="memberAddr" id="sample4_roadAddress" required="required" readonly="readonly" th:value="${memberCommand.memberAddr}"/>
+                회원주소 : <input type="text" name="memberAddr" id="sample4_roadAddress" required="required" th:value="${memberCommand.memberAddr}" readonly="readonly" />
                 <button type="button" onclick="execDaumPostcode();">우편번호 검색</button>
                 <span style="color: red" th:if="${#fields.hasErrors('memberAddr')}" th:errors="*{memberAddr}"></span>
             </td>
