--- a/src/main/resources/templates/thymeleaf/member/memberList.html
+++ b/src/main/resources/templates/thymeleaf/member/memberList.html
@@ -8,5 +8,29 @@
     <a href="memberWrite">회원등록</a><br />
 <!--앞에 member은 그대로 뒤 주소만 바뀜-->
 <!--앞에 /를 붙이면 절대 주소 앞에 / 가 없으면 상대주소-->
+    회원수 : [[${list.size()}]]<br />
+    <table border="1" width="600">
+        <form action="memberList" method="get">
+            <tr>
+                <td colspan="4">
+                    회원 검색 :
+                    <input type="search" name="searchWord" size="60" th:value="${searchWord}"/>
+                    <input type="submit" value="검색" />
+                </td>
+            </tr>
+        </form>
+        <tr>
+            <td>번호</td>
+            <td>이름</td>
+            <td>아이디</td>
+            <td>등록일</td>
+        </tr>
+        <tr th:each = "dto : ${list}">
+            <td>[[${dto.memberNum}]]</td>
+            <td>[[${dto.memberName}]]</td>
+            <td>[[${dto.memberId}]]</td>
+            <td>[[${#dates.format(dto.memberRegist,'yyyy-MM-dd')}]]</td>
+        </tr>
+    </table>
 </body>
 </html>
