feature : 회원 리스트 페이지 네이션

--- a/src/main/resources/templates/thymeleaf/member/memberList.html
+++ b/src/main/resources/templates/thymeleaf/member/memberList.html
@@ -19,17 +19,50 @@
                 </td>
             </tr>
         </form>
-        <tr>
-            <td>번호</td>
-            <td>이름</td>
-            <td>아이디</td>
-            <td>등록일</td>
-        </tr>
+        <form action="membersDelete" method="post" id="frm">
+            <tr>
+                <td><input type="checkbox" id="checkBoxs" /></td>
+                <td>번호</td>
+                <td>이름</td>
+                <td>아이디</td>
+                <td>등록일</td>
+                <td><button type="submit">선택 삭제</button></td>
+            </tr>
+        </form>
         <tr th:each = "dto : ${list}">
             <td>[[${dto.memberNum}]]</td>
             <td>[[${dto.memberName}]]</td>
             <td>[[${dto.memberId}]]</td>
             <td>[[${#dates.format(dto.memberRegist,'yyyy-MM-dd')}]]</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th colspan="6">
+                <span th:if="${page == 1}">
+                    [이전]
+                </span>
+
+                <span th:if="${page} > 1">
+                    <a th:href="|memberList?page=${page - 1}&searchWord=${searchWord}|">
+                        [이전]
+                    </a>
+                </span>
+
+                <th:block th:each="i : ${#numbers.sequence(startPageNum, endPageNum)}">
+                    [<a th:href="|memberList?page=${i}&searchWord=${searchWord}|">[[${i}]]</a>]
+                </th:block>
+
+                <span th:if="${page < maxPage}">
+                    <a th:href="|memberList?page=${page + 1}&searchWord=${searchWord}|">
+                        [다음]
+                    </a>
+                </span>
+
+                <span th:if="${page>=maxPage}">
+                    [다음]
+                </span>
+            </th>
         </tr>
     </table>
 </body>
