--- a/src/main/resources/templates/thymeleaf/member/memberList.html
+++ b/src/main/resources/templates/thymeleaf/member/memberList.html
@@ -1,72 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Insert title here</title>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.1.min.js"></script>
+    <script type="text/javascript" src="/static/js/checkbox.js"></script>
 </head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-<script type="text/javascript" src="/static/js/checkBox.js"></script>
 <body>
-    <a href="memberWrite">회원등록</a><br />
-<!--앞에 member은 그대로 뒤 주소만 바뀜-->
-<!--앞에 /를 붙이면 절대 주소 앞에 / 가 없으면 상대주소-->
-    회원수 : [[${list.size()}]]<br />
-    <table border="1" width="600">
-        <form action="memberList" method="get">
-            <tr>
-                <td colspan="6">
-                    회원 검색 :
-                    <input type="search" name="searchWord" size="60" th:value="${searchWord}"/>
-                    <input type="submit" value="검색" />
-                </td>
-            </tr>
-        </form>
-        <form action="membersDelete" method="post" id="frm">
-            <tr>
-                <td><input type="checkbox" id="checkBoxs" /></td>
-                <td>번호</td>
-                <td>이름</td>
-                <td>아이디</td>
-                <td>등록일</td>
-                <td><button type="submit">선택 삭제</button></td>
-            </tr>
-
-            <tr th:each = "dto : ${list}">
-                <td><input type="checkbox" name="nums" th:value="${dto.memberNum}"/></td>
-                <td>[[${dto.memberNum}]]</td>
-                <td>[[${dto.memberName}]]</td>
-                <td>[[${dto.memberId}]]</td>
-                <td>[[${#dates.format(dto.memberRegist,'yyyy-MM-dd')}]]</td>
-                <td><button type="button" th:attr="onclick=|javascript:Location.href='membersDelete?nums=${dto.memberNum}'|">삭제</button></td>
-            </tr>
-        </form>
+<a href="memberWrite">회원등록</a><br />
+회원수 : [[${count}]]<br />
+<table border=1 width="600">
+    <form action="memberList" method="get">
         <tr>
-            <th colspan="6">
-                <span th:if="${page == 1}">
-                    [이전]
-                </span>
-
-                <span th:if="${page} > 1">
-                    <a th:href="|memberList?page=${page - 1}&searchWord=${searchWord}|">
-                        [이전]
-                    </a>
-                </span>
-
-                <th:block th:each="i : ${#numbers.sequence(startPageNum, endPageNum)}">
-                    [<a th:href="|memberList?page=${i}&searchWord=${searchWord}|">[[${i}]]</a>]
-                </th:block>
-
-                <span th:if="${page < maxPage}">
-                    <a th:href="|memberList?page=${page + 1}&searchWord=${searchWord}|">
-                        [다음]
-                    </a>
-                </span>
-
-                <span th:if="${page>=maxPage}">
-                    [다음]
-                </span>
-            </th>
+            <td colspan="6">회원 검색:
+                <input type="search" name="searchWord" size=60 th:value="${searchWord}">
+                <input type="submit" value="검색">
+            </td>
         </tr>
-    </table>
+    </form>
+    <form action="membersDelete" method="post" id="frm">
+        <tr><td><input type="checkbox" id="checkBoxs" /></td>
+            <td>번호</td><td>이름</td><td>아이디</td><td>등록일</td>
+            <td><button type="submit" >선택 삭제</button></td>
+        </tr>
+        <tr th:each=" dto : ${list}">
+            <td><input type="checkbox" name="nums" th:value="${dto.memberNum}"/></td>
+            <td><a th:href="|memberDetail/${dto.memberNum}|">[[${dto.memberNum}]]</a></td>
+            <td><a th:href="@{memberDetail/${dto.memberNum}}">[[${dto.memberName}]]</a></td>
+            <td>[[${dto.memberId}]]</td>
+            <td>[[${#dates.format(dto.memberRegist,'yyyy-MM-dd')}]]</td>
+            <td><button type="button" th:attr="onclick=|javascript:location.href='membersDelete?nums=${dto.memberNum}'|">삭제</button></td>
+        </tr>
+    </form>
+    <tr>
+        <th colspan="6">
+            <span th:if="${page <= 1}">[이전]</span>
+            <span th:if="${page > 1}">
+			<a th:href="|memberList?page=${page - 1}&searchWord=${searchWord}|">[이전]</a>
+		</span>   									<!-- 1,          10  -->
+            <th:block th:each=" i : ${#numbers.sequence(startPageNum, endPageNum)}">
+                [<a th:href="|memberList?page=${i}&searchWord=${searchWord}|">[[${i}]]</a>]
+            </th:block>
+            <span th:if="${page < maxPage}">
+			<a th:href="@{memberList(page=${page + 1},searchWord=${searchWord})}">[다음]</a>
+		</span>
+            <span th:if="${page >= maxPage}">
+			[다음]
+		</span>
+        </th>
+    </tr>
+</table>
 </body>
 </html>
