--- a/src/main/resources/templates/thymeleaf/member/memberModify.html
+++ b/src/main/resources/templates/thymeleaf/member/memberModify.html
@@ -20,6 +20,6 @@
     생년월일 : <input type="date" name="memberBirth" th:field="*{memberBirth}"/><br />
     이메일 : <input type="email" name="memberEmail" th:field="*{memberEmail}"/><br />
     <input type="submit" value="회원수정 완료" />
-    <input type="button" value="회원목록" onclick="javascript:location.href='memberList.mem'">
+    <input type="button" value="회원목록" onclick="javascript:location.href='memberList'">
 </body>
 </html>
