--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -8,5 +8,25 @@
     Hello
     <li><a href="member/memberList">회원목록</a></li>
     <li><a href="employee/employeeList">직원목록</a></li>
+
+    <table border="1" align="center">
+        <tr>
+            <td colspan="2"> 자동로그인 | 아이디저장</td>
+        </tr>
+
+        <tr>
+            <td>1</td>
+            <td>2</td>
+        </tr>
+
+        <tr>
+            <td>3</td>
+            <td>4</td>
+        </tr>
+
+        <tr>
+            <td colspan="2">아이디 / 비밀번호찾기 | <a href="/register/userAgree">회원가입</a></td>
+        </tr>
+    </table>
 </body>
 </html>
