--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -5,28 +5,34 @@
     <title>Title</title>
 </head>
 <body>
-    Hello
-    <li><a href="member/memberList">회원목록</a></li>
-    <li><a href="employee/employeeList">직원목록</a></li>
+    Hello<br/>
+    <div th:if="${session.auth != null}">
+        <li><a href="member/memberList">회원목록</a></li>
+        <li><a href="employee/employeeList">직원목록</a></li>
+        <li><a href="login/logout">로그아웃</a></li>
+    </div>
+    <div th:if="${session.auth == null}">
+        <form action="login/login" method="post">
+            <table border="1" align="center">
+                <tr>
+                    <td colspan="2"> 자동로그인 | 아이디저장</td>
+                </tr>
 
-    <table border="1" align="center">
-        <tr>
-            <td colspan="2"> 자동로그인 | 아이디저장</td>
-        </tr>
+                <tr>
+                    <td>아이디 : <input type="text" name="userId" /></td>
+                    <td rowspan="2"><input type="image" src="/static/images/서머%20브리즈%20밀짚모자1.png" width="60px" height="60px" /></td>
+                </tr>
 
-        <tr>
-            <td>1</td>
-            <td>2</td>
-        </tr>
+                <tr>
+                    <td>비밀번호 : <input type="password" name="userPw" /></td>
+                </tr>
 
-        <tr>
-            <td>3</td>
-            <td>4</td>
-        </tr>
-
-        <tr>
-            <td colspan="2">아이디 / 비밀번호찾기 | <a href="/register/userAgree">회원가입</a></td>
-        </tr>
-    </table>
+                <tr>
+                    <td colspan="2">아이디 / 비밀번호찾기 | <a href="/register/userAgree">회원가입</a></td>
+                </tr>
+            </table>
+        </form>
+    </div>
 </body>
 </html>
+
