--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -7,6 +7,7 @@
 <body>
     Hello<br/>
     <div th:if="${session.auth != null}">
+        <li><a href="myPage/memberMypage">내 정보 보기</a></li>
         <li><a href="member/memberList">회원목록</a></li>
         <li><a href="employee/employeeList">직원목록</a></li>
         <li><a href="/login/logout">로그아웃</a></li>
