--- a/src/main/resources/templates/thymeleaf/myPage/myModify.html
+++ b/src/main/resources/templates/thymeleaf/myPage/myModify.html
@@ -10,7 +10,7 @@
     <li><a href="<c:url value='/' />">홈</a></li>
     <li><a href="memberMyPage">내 정보 보기</a></li>
     <li><a href="memberUpdate">내 정보 수정</a></li>
-    <li><a href="memberPwUpdate">비밀번호 변경</a></li>
+    <li><a href="memberPwModify">비밀번호 변경</a></li>
     <li><a href="memberDrop">회원 탈퇴</a></li>
 </ul>
 
