--- a/src/main/resources/templates/thymeleaf/myPage/myNewPw.html
+++ b/src/main/resources/templates/thymeleaf/myPage/myNewPw.html
@@ -5,6 +5,11 @@
     <title>Title</title>
 </head>
 <body>
+    <li><a href="/">홈</a></li>
+    <li><a href="memberMyPage">내 정보 보기</a></li>
+    <li><a href="memberPwModify">비밀번호 변경</a></li>
+    <li><a href="memberUpdate">내 정보 수정</a></li>
+    <li><a href="memberDrop">회원 탈퇴</a></li>
     <form action="memberPwPro" method="post" id="frm">
         현재 비밀번호 : <input type="password" name="oldPw" id="oldPw" required="required" />
         새 비밀번호 : <input type="password" name="newPw" id="newPw" required="required" />
