--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -11,10 +11,12 @@
                 <li><a href="member/memberList">회원관리</a></li>
                 <li><a href="employee/employeeList">직원 관리</a></li>
                 <li><a href="mailling">메일보내기</a></li>
-                <li><a href="myPage/employeeDetail">내 정보 보기</a></li>
+                <li><a href="myPage/employeeMyPage">내 정보 보기</a></li>
             </th:block>
 
             <th:block th:if="${session.auth.grade == 'mem'}">
+                <li><a href="member/memberList">회원관리</a></li>
+                <li><a href="employee/employeeList">직원 관리</a></li>
                 <li><a href="myPage/memberMypage">내 정보 보기</a></li>
             </th:block>
 
