--- a/src/main/resources/templates/thymeleaf/employee/employeeModify.html
+++ b/src/main/resources/templates/thymeleaf/employee/employeeModify.html
@@ -18,5 +18,6 @@
     이메일 : <input type="email" name="empEmail" th:field="*{empEmail}"/><br />
     <input type="submit" value="직원수정 완료" />
     <input type="button" value="직원목록" onclick="javascript:location.href='employeeList'">
+</form>
 </body>
 </html>
