feature : 상품 삭제

--- a/src/main/resources/templates/thymeleaf/goods/goodsInfo.html
+++ b/src/main/resources/templates/thymeleaf/goods/goodsInfo.html
@@ -18,7 +18,7 @@
     <tr><th>마지막 수정일</th><td>[[${goodsCommand.goodsUpdateDate}]]</td></tr>
     <tr><th colspan="2">
         <a th:href="|../goodsUpdate/${goodsCommand.goodsNum}|">상품수정</a> |
-        <a th:href="|goodsDelete/${goodsCommand.goodsNum}|">상품 삭제</a> |
+        <a th:href="|../goodsDelete/${goodsCommand.goodsNum}|">상품 삭제</a> |
         <a href="goodsList">상품목록</a></th></tr>
 </table>
 </body>
