--- a/src/main/resources/templates/thymeleaf/goods/goodsList.html
+++ b/src/main/resources/templates/thymeleaf/goods/goodsList.html
@@ -2,28 +2,54 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>goodsList.jsp</title>
-  <script type="text/javascript">
-    function selectProduct(goodsNum, goodsName) {
-      opener.document.getElementById('goodsNum').value = goodsNum;
-      opener.document.getElementById('goodsName').value = goodsName;
-      window.close();
-    }
-  </script>
+  <title>Insert title here</title>
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.1.min.js"></script>
+  <script type="text/javascript" src="/static/js/checkbox.js"></script>
 </head>
 <body>
-<ul>
-  <li><a href="goodsWrite">상품 추가</a></li>
-  <li><a href="goodsIpgo">상품 입고</a></li>
-  <li><a href="goodsIpgoList">상품 입고 현황</a></li>
-</ul>
-<table border="1" width="600" align="center">
-  <caption>상품 목록</caption>
-    <tr th:each="goodsCommand : ${goodsCommand}">
-      <td><a th:href="|goodsInfo/${goodsCommand.goodsNum}|">상품번호: [[${goodsCommand.goodsNum}]]</a></td>
-      <td>상품 이름 : [[${goodsCommand.goodsName}]]</td>
-      <td>상품 가격 : [[${goodsCommand.goodsPrice}]]</td>
+
+<table border=1 width="600" align="center">
+  <form action="goodsList" method="get">
+    <tr>
+      <td colspan="6">상품 검색:
+        <input type="search" name="searchWord" size=60 th:value="${searchWord}">
+        <input type="submit" value="검색">
+      </td>
     </tr>
+  </form>
+  <form action="goodsDelete" method="post" id="frm">
+    <tr><td><input type="checkbox" id="checkBoxs" /></td>
+      <td>번호</td><td>이름</td><td>가격</td><td>등록날짜</td>
+      <td><button type="submit" >선택 삭제</button></td>
+    </tr>
+    <tr th:each=" dto : ${list}">
+      <td><input type="checkbox" name="nums" th:value="${dto.goodsNum}"/></td>
+      <td><a th:href="|goodsInfo/${dto.goodsNum}|">[[${dto.goodsNum}]]</a></td>
+      <td><a th:href="@{goodsInfo/${dto.goodsNum}}">[[${dto.goodsName}]]</a></td>
+      <td>[[${dto.goodsPrice}]]</td>
+      <td>[[${#dates.format(dto.goodsRegistDate,'yyyy-MM-dd')}]]</td>
+      <td><button type="button" th:attr="onclick=|javascript:location.href='goodsDelete/${dto.goodsNum}'|">삭제</button></td>
+    </tr>
+  </form>
+  <tr>
+    <th colspan="6">
+      <span th:if="${page <= 1}">[이전]</span>
+      <span th:if="${page > 1}">
+			<a th:href="|goodsList?page=${page - 1}&searchWord=${searchWord}|">[이전]</a>
+		</span>   									<!-- 1,          10  -->
+      <th:block th:each=" i : ${#numbers.sequence(startPageNum, endPageNum)}">
+        [<a th:href="|goodsList?page=${i}&searchWord=${searchWord}|">[[${i}]]</a>]
+      </th:block>
+      <span th:if="${page < maxPage}">
+			<a th:href="@{goods(List=${page + 1},searchWord=${searchWord})}">[다음]</a>
+		</span>
+      <span th:if="${page >= maxPage}">
+			[다음]
+		</span>
+    </th>
+  </tr>
 </table>
 </body>
 </html>
+
+
