--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -13,6 +13,7 @@
                 <li><a href="mailling">메일보내기</a></li>
                 <li><a href="myPage/employeeMyPage">내 정보 보기</a></li>
                 <li><a href="goods/goodsList">상품리스트</a></li>
+                <li><a href="goods/goodsWrite">상품추가</a></li>
             </th:block>
 
             <th:block th:if="${session.auth.grade == 'mem'}">
