--- a/src/main/resources/templates/thymeleaf/goods/goodsWrite.html
+++ b/src/main/resources/templates/thymeleaf/goods/goodsWrite.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
-  <script src="http://code.jquery.com/jquery-latest.js"></script>
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.1.min.js"></script>
   <script type="text/javascript">
     $(function(){
       $.ajax({
