feature : 이미지 파일 업데이트 (미완)

--- a/src/main/resources/templates/thymeleaf/goods/goodsInfo.html
+++ b/src/main/resources/templates/thymeleaf/goods/goodsInfo.html
@@ -16,6 +16,20 @@
     <tr><th>등록일</th><td>[[${goodsCommand.goodsRegistDate}]]</td></tr>
     <tr><th>마지막 수정 사원</th><td>[[${goodsCommand.updateEmpNum}]]</td></tr>
     <tr><th>마지막 수정일</th><td>[[${goodsCommand.goodsUpdateDate}]]</td></tr>
+    <tr>
+        <td colspan="2">
+            대문이미지 <br />
+            <img th:src="|/static/upload/${goodsCommand.goodsMainStoreImage}|" />
+        </td>
+    </tr>
+
+    <tr>
+        <td colspan="2">
+            상세이미지 <br />
+            <th:block th:each="image : ${#strings.arraySplit(goodsCommand.goodsDetailStoreImage, '/')}">
+            </th:block>
+        </td>
+    </tr>
     <tr><th colspan="2">
         <a th:href="|../goodsUpdate/${goodsCommand.goodsNum}|">상품수정</a> |
         <a th:href="|../goodsDelete/${goodsCommand.goodsNum}|">상품 삭제</a> |
