refactor : 상품 등록 이동 수정

--- a/src/main/resources/templates/thymeleaf/goods/goodsWrite.html
+++ b/src/main/resources/templates/thymeleaf/goods/goodsWrite.html
@@ -8,7 +8,7 @@
     $(function(){
       $.ajax({
         type : "get",
-        url: "goodsWrite",
+        url: "goodsForm",
         dataType:"html",
         success:function(result){
           $("#writeForm").html(result);
