--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -14,6 +14,9 @@
                 <li><a href="myPage/employeeMyPage">내 정보 보기</a></li>
                 <li><a href="goods/goodsList">상품리스트</a></li>
                 <li><a href="goods/goodsWrite">상품추가</a></li>
+                <li><a href="goodsIpgo/goodsIpgo">상품 입고</a></li>
+                <li><a href="goodsIpgo/goodsIpgoList">상품 입고 현황</a></li>
+
             </th:block>
 
             <th:block th:if="${session.auth.grade == 'mem'}">
