refactor : 상품명 추가

--- a/src/main/resources/templates/thymeleaf/goodsIpgo/goodsIpgoDetail.html
+++ b/src/main/resources/templates/thymeleaf/goodsIpgo/goodsIpgoDetail.html
@@ -6,7 +6,7 @@
 <body>
 입고번호 : [[${goodsIpgoCommand.ipgoNum}]]<br />
 상품번호 : [[${goodsIpgoCommand.goodsNum}]]<br />
-<%--상품명 : --%>
+상품명 : [[${goodsIpgoCommand.goodsName}}]]
 입고일 : [[${goodsIpgoCommand.ipgoDate}]]<br />
 입고 수량 : [[${goodsIpgoCommand.ipgoQty}]]<br />
 제조일 : [[${goodsIpgoCommand.madeDate}]]<br />
