--- a/src/main/resources/templates/thymeleaf/goodsIpgo/goodsIpgoDetail.html
+++ b/src/main/resources/templates/thymeleaf/goodsIpgo/goodsIpgoDetail.html
@@ -12,6 +12,6 @@
 가격 : [[${goodsIpgoCommand.ipgoPrice}]]<br />
 등록한 사원 : [[${goodsIpgoCommand.empNum}]]<br />
 <a th:href="|../ipgoUpdate/${goodsIpgoCommand.ipgoNum}|">입고 수정</a> |
-<a th:href="|../ipgoDelete/${goodsIpgoCommand.ipgoNum}|">입고 수정</a>
+<a th:href="|../ipgoDelete/${goodsIpgoCommand.ipgoNum}|">입고 삭제</a>
 </body>
 </html>
