refactor : url 설정

--- a/src/main/resources/templates/thymeleaf/goodsIpgo/goodsIpgo.html
+++ b/src/main/resources/templates/thymeleaf/goodsIpgo/goodsIpgo.html
@@ -5,7 +5,7 @@
     <title>goodsIpgo.jsp</title>
 </head>
 <body>
-<a href="<c:url value='/' />">홈</a>
+<a href="/">홈</a>
 <ul>
     <li><a href="goodsIpgoList">상품 입고 현황</a></li>
 </ul>
