refactor : 상품 상세 및 수정

--- a/src/main/resources/templates/thymeleaf/goods/goodsWrite.html
+++ b/src/main/resources/templates/thymeleaf/goods/goodsWrite.html
@@ -21,13 +21,11 @@
   </script>
 </head>
 <body>
-  <ul>
-    <li><a href="goodsForm">상품추가</a></li>
-    <li><a href="goodsIpgoList">상품 입고 현황</a></li>
-  </ul>
-  <div id="wirteForm">
-
-  </div>
-
+<ul>
+  <li><a href="goodsForm">상품추가</a></li>
+  <li><a href="goodsIpgoList">상품 입고 현황</a></li>
+</ul>
+<div id="writeForm">
+</div>
 </body>
 </html>
