--- a/src/main/resources/templates/thymeleaf/goods/goodsInfo.html
+++ b/src/main/resources/templates/thymeleaf/goods/goodsInfo.html
@@ -16,20 +16,16 @@
     <tr><th>등록일</th><td>[[${goodsCommand.goodsRegistDate}]]</td></tr>
     <tr><th>마지막 수정 사원</th><td>[[${goodsCommand.updateEmpNum}]]</td></tr>
     <tr><th>마지막 수정일</th><td>[[${goodsCommand.goodsUpdateDate}]]</td></tr>
-    <tr>
-        <td colspan="2">
-            대문이미지 <br />
-            <img th:src="|/static/upload/${goodsCommand.goodsMainStoreImage}|" />
-        </td>
-    </tr>
 
-    <tr>
-        <td colspan="2">
-            상세이미지 <br />
-            <th:block th:each="image : ${#strings.arraySplit(goodsCommand.goodsDetailStoreImage, '/')}">
-            </th:block>
-        </td>
-    </tr>
+    <tr><td colspan="2">대문이미지<br />
+        <img th:src="|/static/upload/${goodsCommand.goodsMainImage}|"/>
+    </td></tr>
+    <tr><td colspan="2">상세이미지<br />
+        <th:block th:each="image : ${#strings.arraySplit(goodsCommand.goodsDetailImage,'/')}">
+            <img th:src="|/static/upload/${image}|"/><br />
+        </th:block>
+    </td></tr>
+
     <tr><th colspan="2">
         <a th:href="|../goodsUpdate/${goodsCommand.goodsNum}|">상품수정</a> |
         <a th:href="|../goodsDelete/${goodsCommand.goodsNum}|">상품 삭제</a> |
