--- a/src/main/resources/templates/thymeleaf/goods/goodsUpdate.html
+++ b/src/main/resources/templates/thymeleaf/goods/goodsUpdate.html
@@ -60,7 +60,8 @@
     <tr><th>마지막 수정일</th>
       <td><input type="date" name="goodsUpdateDate" th:value="${#dates.format(goodsCommand.goodsUpdateDate,'yyyy-MM-dd')}" readonly="readonly"></td></tr>
     <tr><th>대문이미지</th>
-      <td><input type="file" name="goodsMainImage" id="mainFile" style="display:none"/>
+      <td>
+        <input type="file" name="goodsMainImage" id="mainFile" style="display:none"/>
         <span id="main">[[${goodsCommand.goodsMainImage}]]</span><button type="button" th:attr="onclick=|javascript:fileDel(this, '${goodsCommand.goodsMainImage}', '${goodsCommand.goodsMainStoreImage}', 'main');|">삭제</button>
       </td>
     </tr>
@@ -71,7 +72,12 @@
 
         <input type="file" name="goodsDetailImage" multiple="multiple" /></td>
     </tr>
-    <tr><th colspan="2"><input type="submit" value="수정완료" /></th></tr>
+    <tr>
+      <th colspan="2">
+        <input type="submit" value="수정완료" />
+        <input type="button" value="뒤로가기" onclick="javascript:history.back()">
+      </th>
+    </tr>
   </table>
 </form>
 </body>
